letsencrypt/Argocd/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd-ui
  namespace: argocd
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    ingress.kubernetes.io/proxy-body-size: 100M
    ingress.kubernetes.io/app-root: "/"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - argoccd.devops-prod.online
    secretName: letsencrypt-prodc
  rules:
  - host: argoccd.devops-prod.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: http
