letsencrypt/Argocd/ingress-letsencrypt-staging2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd-ui
  annotations:
    cert-manager.io/issuer: "letsencrypt-staging"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - argocd.devops-prod.online
    secretName: quickstart-example-tls
  rules:
  - host: argocd.devops-prod.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: http
